asset/scss/seafoam.scss
/* ... */
.item-showcase-multiples .card img {
  @include breakpoint(medium) {
    object-fit: contain;
    max-height: rem-calc(300);
  }
  @include breakpoint(large) {
    max-height: rem-calc(350);
  }
  @include breakpoint(xxlarge) {
    max-height: rem-calc(450);
  }
}

/*Increase font-size for single Item Showcase blocks*/
.item-showcase h2 {
  font-size: 1.2 * $global-font-size;
  font-weight: 300;
}

.item-showcase:only-child h2 {
  font-weight: 300;
  font-size: 1.25 * $global-font-size;
  margin-top: $global-margin;
  @include breakpoint (large) {
  font-size: 1.7 * $global-font-size;
  }
}

.item-showcase:only-child .metadata h2 {
  @include breakpoint(large) {
  font-size: 1.75rem;
}
}

/*Change button size for link to Item Show*/ 
.item-showcase .learn-more h2 {
  font-size: 1.1 * $global-font-size;
}

/*Remove margin top for button*/ 
.learn-more h2.button {
  margin-top: 0!important;
  }

/*Media Embed*/
/*Increase size of thumbnails for Media Embed blocks*/ 
.media-embed-block.left {
  float: left;
  margin: 0 1.5 * $global-margin $global-margin 0!important;
  max-width: 50%!important;
  @include breakpoint(medium) {
    margin: 0 2 * $global-margin $global-margin 0!important;
}
  @include breakpoint(large) {
      max-width: 40%!important;
      margin: 0 3 * $global-margin $global-margin 0!important;
  }
}

.media-embed-block.right {
  float: right;
  margin: 0 0 $global-margin 1.5 * $global-margin!important;
  max-width: 50%;
  @include breakpoint(medium) {
    margin: 0 0 $global-margin 2 * $global-margin!important;
}
  @include breakpoint(large) {
      max-width: 40%;
      margin: 0 3 * $global-margin $global-margin;
  }
}

.media-embed-block.left .max-image-height img,
.media-embed-block.right .max-image-height img {
  max-height: 50vh;
}

.file img {
  max-width: 100%;
  height: auto;
  @include breakpoint(large) {
  max-height: 80vh;
  }
}

.file .metadata h2 {
  @include breakpoint(large) {
  font-size: rem-calc(28);
  }
}

/*Centre media embed items when option chosen*/
.center.file, .center.assets {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  text-align: center;
}

/*Card Styling*/
.card-divider a {
  color: $white;
}

/*Content Warning*/
.content-warning {
  background-color: $light-gray;
  color: $black;
}

.content-warning-panel {
  background-color: $dark-gray;
  padding: 0 0.5 * $global-padding;
  width: 100%;
  min-height: 40px;
  @include breakpoint(medium) {
    max-width: 40px;
  }
  @include breakpoint(large) {
    padding: 0 $global-padding;
  }
}

.content-warning-text {
  padding: 3 * $global-padding 0;
}

.fa-exclamation-triangle:before {
  color: $white;
  font-size: 18px;
}

/*Coloured backgrounds*/
.background-colour-primary {
  background-color: $primary-color;
  color: $white;
  a {
      color: $white;
  }
}

.background-colour-secondary {
  background-color: $secondary-color;
  color: $white;
  a {
      color: $white;
  }
}

.background-colour-light-gray {
  background-color: $light-gray;
}

.background-colour-dark-gray {
  background-color: $dark-gray;
  color: $white;
  a {
      color: $white;
  }
}

.background-colour-uom-footer {
  background-color: $uom-footer;
  color: $white;
  a {
      color: $warning-color;
  }
  a:hover {
    text-decoration: underline;
  }
  a.button {
      color: $white;
  }
  h2 {
    color: $warning-color;
}
  h2 small {
      color: $white;
  }
  h3 {
    color: $warning-color;
  }
  h3 small {
      color: $white;
  }
  h4 {
    color: $warning-color;
  }
  h4 small {
      color: $white;
  }
  p.h4 small {
    color: $white;
  }
  .learn-more h2.button a {
    color: $black;
  }
  .learn-more .hollow.button.warning a {
    color: $warning-color;
  }
  .learn-more .hollow.button.warning:hover a {
    color: $black;
  }
}

/*Remove margin from h2 learn more button*/
.learn-more h2.button {
  margin: 0;
}

/*Add colour fill to hollow button*/ 
.learn-more .button.hollow.warning:hover {
  background: $warning-color;
}

.button a:hover {
  text-decoration: none;
}

/*Styling for caption-toggle button*/

/*Ensure caption does not overflow button*/
.toggle-caption .orbit-caption {
  bottom: 84px;
  background-color: rgba(10, 10, 10, .85);
}
@media screen and (min-width: 322px) {
.toggle-caption .orbit-caption {
  bottom: 59px;
}
}

/*Add overflow-y for larger captions*/
.toggle-caption .orbit-caption {
  max-height: 90vh;
  overflow-y: auto;
}

.caption-toggle .toggle-caption .button {
  background-color: $dark-gray; 
  h2 {
    color:$white;
  }
}

.toggle-caption-img {
  width: 100%;
  position: relative;
  height: calc(60vh + 59.19px);
  overflow-y: scroll;
  @include breakpoint(large) {
    height: calc(70vh + 59.19px);
  }
}

.toggle-caption-img img {
  height: 60vh;
  object-fit: cover;
  object-position: center;
  width: 100%;
  @include breakpoint(large) {
    height: 70vh;
  }
}

.toggle-caption-img .toggle-caption .orbit-caption {
  max-height: 60vh;
  @include breakpoint(large) {
    max-height: 70vh;
  }
}


/*IIIF Presentation media type*/
.media-render.iiif_presentation iframe {
  height: 80vh;
  @include breakpoint(large) {
  height: 90vh!important;
  }
}

.item-showcase .media-render.iiif_presentation iframe {
  height: 80vh;
}

/*List of sites*/

.site-list {
  display: grid;
  /*grid-template-columns: repeat(3, 1fr);*/
  grid-auto-rows: 1fr;
  grid-column-gap: rem-calc(24);
  grid-row-gap: rem-calc(24);
  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
}

.list-of-sites .site-list .site-thumbnail-image {
  max-width: 100%;
  float: unset;
  margin-right: 0;
  height: rem-calc(350);
  width: 100%;
  object-fit: cover;
}

.list-of-sites .site-list .site-summary {
overflow: hidden;
line-clamp: 5;
text-overflow: ellipsis;
display: -webkit-box;
-webkit-line-clamp: 3;
-webkit-box-orient: vertical; 
 margin: 1rem 0 1rem 0;
}

.site {
position: relative;
}

.site a.site-link {
position: absolute;
}
/* ... */

